feat: add button styles

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "main": "./index.js",
     "dependencies": {
         "@nextrap/nt-framework": "^1.1.1",
+        "@nextrap/style-base": "^1.1.10",
+        "@nextrap/style-button": "^0.0.6",
         "monaco-editor": "^0.52.2"
     },
     "devDependencies": {
