--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
         "@nextrap/nt-framework": "^1.1.1",
         "@nextrap/style-base": "^1.1.10",
         "@nextrap/style-button": "^0.0.6",
-        "monaco-editor": "^0.52.2"
+        "@nx/vite": "^21.3.11",
+        "monaco-editor": "^0.52.2",
+        "path": "^0.12.7",
+        "sass-embedded": "^1.90.0",
+        "vite": "^6.3.5",
+        "vite-plugin-dts": "^4.5.4"
     },
     "devDependencies": {
         "@nextrap/style-reset": "^0.1.1",
