--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ vite.config.*.timestamp*
 vitest.config.*.timestamp*
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
+
+# Dotenv
+.env
