--- a/copilot-server/package.json
+++ b/copilot-server/package.json
@@ -7,12 +7,13 @@
     "start": "tsx src/server.ts",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "generate-env-types": "dotenv-types .env"
+    "gen-env-types": "gen-env-types .env -o src/env.d.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
-    "dotenv-types": "^1.0.0",
     "fastify": "^4.26.2",
+    "gen-env-types": "^1.3.4",
+    "monacopilot": "^1.2.7",
     "tsx": "^4.7.1"
   },
   "devDependencies": {
