--- a/copilot-server/package.json
+++ b/copilot-server/package.json
@@ -10,8 +10,9 @@
     "gen-env-types": "gen-env-types .env -o src/env.d.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "dotenv": "^17.2.1",
-    "fastify": "^4.26.2",
+    "fastify": "^5.5.0",
     "gen-env-types": "^1.3.4",
     "monacopilot": "^1.2.7",
     "tsx": "^4.7.1"
