--- a/editor-client/package.json
+++ b/editor-client/package.json
@@ -2,12 +2,17 @@
     "name": "@nextrap/monaco-editor-integration",
     "version": "1.1.9",
     "main": "./index.js",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+    },
     "dependencies": {
         "@nextrap/nt-framework": "^1.1.1",
         "@nextrap/style-base": "^1.1.10",
         "@nextrap/style-button": "^0.0.6",
         "@nx/vite": "^21.3.11",
         "monaco-editor": "^0.52.2",
+        "monacopilot": "^1.2.7",
         "path": "^0.12.7",
         "sass-embedded": "^1.90.0",
         "vite": "^6.3.5",
