--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "@nextrap/nt-framework": "^1.1.1",
         "@nextrap/style-base": "^1.1.10",
         "@nextrap/style-button": "^0.0.6",
-        "monaco-editor": "^0.52.2"
+        "monaco-editor": "^0.52.2",
+
     },
     "devDependencies": {
         "@nextrap/style-reset": "^0.1.1",
-        "vite-plugin-monaco-editor": "^1.1.0"
+        "vite-plugin-monaco-editor": "^1.1.0",
+        "vite": "^7.1.0"
     },
     "type": "module",
     "style": "./index.css",
