--- a/editor-client/package.json
+++ b/editor-client/package.json
@@ -21,8 +21,7 @@
     },
     "devDependencies": {
         "@nextrap/style-reset": "^0.1.1",
-        "vite-plugin-monaco-editor": "^1.1.0",
-        "vite": "^7.1.0"
+        "vite-plugin-monaco-editor": "^1.1.0"
     },
     "type": "module",
     "style": "./index.css",
