--- a/copilot-server/package.json
+++ b/copilot-server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@fastify/static": "^8.2.0",
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
     "gen-env-types": "^1.3.4",
