--- a/.kick.yml
+++ b/.kick.yml
@@ -5,6 +5,10 @@ from: "ghcr.io/nfra-project/kickstart-flavor-php:8.3"
 ports: "80:80;4000:4000;4100:4100;127.0.0.1:2222:22"
 secrets: open_ai
 
+config_file:
+  template: "config.ts.dist"
+  target: "config.ts"
+
 
 command:
   build: |
